--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vercel/blob": "^0.9.2",
     "ai": "^2.1.19",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
