--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "tailwindcss-animate": "^1.0.6",
     "tiptap-markdown": "^0.8.1",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4"
   }
 }
