--- a/.github/workflows/next.yml
+++ b/.github/workflows/next.yml
@@ -19,7 +19,7 @@ jobs:
       run: echo "${{ secrets.NEXT_LOCAL_ENV }}" > ./.env.local
       
     - name: Docker build
-      run: docker build -t ${{ secrets.DOCKER_REPO }}/${{ secrets.DOCKER_IMAGE }} .
+      run: DOCKER_BUILDKIT=1 docker build -t ${{ secrets.DOCKER_REPO }}/${{ secrets.DOCKER_IMAGE }} .
       
     - name: Login to Docker Hub
       uses: docker/login-action@v2
