--- a/.github/workflows/next.yml
+++ b/.github/workflows/next.yml
@@ -37,6 +37,6 @@ jobs:
         username: ec2-user
         key: ${{ secrets.PRIVATE_KEY }}
         script: |
-            ssh next sudo docker rm -f $(docker ps -qa)
+            ssh next sudo docker rm -f $(ssh next sudo docker ps -qa)
             ssh next sudo docker pull ${{ secrets.DOCKER_REPO }}/${{ secrets.DOCKER_IMAGE }}
             ssh next sudo docker run -dp 3000:3000 ${{ secrets.DOCKER_REPO }}/${{ secrets.DOCKER_IMAGE }}
