--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest test",
+    "test:coverage": "npm test -- --coverage"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.9",
@@ -27,7 +29,6 @@
     "@tiptap/starter-kit": "^2.0.3",
     "@tiptap/suggestion": "^2.0.3",
     "@types/node": "20.3.1",
-    "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@vercel/blob": "^0.9.2",
     "ai": "^2.1.19",
@@ -49,6 +50,13 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.4.4"
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.1.1"
   }
 }
