--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-next": "13.4.7",
     "lucide-react": "^0.259.0",
     "next": "^13.2.4",
+    "openai-edge": "^1.2.2",
     "postcss": "8.4.24",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
