--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/react-test-renderer": "^18.0.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "react-test-renderer": "^18.2.0",
