--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "openai-edge": "^1.2.2",
     "postcss": "8.4.24",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "sonner": "^0.6.2",
