--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-calendar": "^4.6.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-spinners": "^0.13.8",
     "sonner": "^0.6.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
