--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "sonner": "^0.6.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
