--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
+    "next-router-mock": "^0.9.9",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.1"
   }
