--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-calendar": "^4.6.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-moveable": "^0.54.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "sonner": "^0.6.2",
