--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -37,7 +37,8 @@ jobs:
         username: ec2-user
         key: ${{ secrets.PRIVATE_KEY }}
         script: |
-            sudo docker stop frontend
-            sudo docker rm frontend
-            sudo docker pull ${{ secrets.DOCKER_REPO }}/${{ secrets.DOCKER_IMAGE }}
-            sudo docker run -dp 3000:3000 --name=frontend ${{ secrets.DOCKER_REPO }}/${{ secrets.DOCKER_IMAGE }}
+            docker stop frontend
+            docker rm frontend
+            docker rmi ${{ secrets.DOCKER_REPO }}/${{ secrets.DOCKER_IMAGE }}
+            docker pull ${{ secrets.DOCKER_REPO }}/${{ secrets.DOCKER_IMAGE }}
+            docker run -dp 3000:3000 --name=frontend ${{ secrets.DOCKER_REPO }}/${{ secrets.DOCKER_IMAGE }}
