--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
+    "timeago.js": "^4.0.2",
     "tiptap-markdown": "^0.8.1",
     "typeit-react": "^2.6.4",
     "typescript": "5.1.3"
