--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sentry/nextjs": "^7.61.0",
     "@tailwindcss/typography": "^0.5.9",
     "@tiptap/core": "^2.0.3",
+    "@tiptap/extension-code-block-lowlight": "^2.1.11",
     "@tiptap/extension-color": "^2.0.3",
     "@tiptap/extension-heading": "^2.0.3",
     "@tiptap/extension-highlight": "^2.0.3",
@@ -37,6 +38,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "lowlight": "2.4",
     "lucide-react": "^0.259.0",
     "next": "^13.2.4",
     "openai-edge": "^1.2.2",
