--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "loadsh": "^0.0.4",
+    "lodash": "^4.17.21",
     "lowlight": "2.4",
     "lucide-react": "^0.259.0",
     "next": "^13.2.4",
