--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-moveable": "^0.54.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "sharp": "^0.32.6",
     "sonner": "^0.6.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
