--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "react-calendar": "^4.6.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-markdown": "^9.0.0",
     "react-moveable": "^0.54.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "remark-gfm": "^4.0.0",
     "sharp": "^0.32.6",
     "sonner": "^0.6.2",
     "tailwind-merge": "^1.13.2",
