--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "postcss": "8.4.24",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-markdown": "^9.0.0",
