--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vercel/blob": "^0.9.2",
     "ai": "^2.2.10",
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.4.0",
     "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
@@ -48,6 +49,7 @@
     "postcss": "8.4.24",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
