--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@tiptap/suggestion": "^2.0.3",
     "@types/node": "20.3.1",
     "@types/react-dom": "18.2.6",
+    "@upstash/ratelimit": "^0.4.4",
     "@vercel/blob": "^0.9.2",
+    "@vercel/kv": "^0.2.3",
     "ai": "^2.2.10",
     "autoprefixer": "10.4.14",
     "chart.js": "^4.4.0",
