--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "autoprefixer": "10.4.14",
     "chart.js": "^4.4.0",
     "clsx": "^1.2.1",
+    "embla-carousel-autoplay": "^8.0.0-rc14",
+    "embla-carousel-react": "^8.0.0-rc14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "loadsh": "^0.0.4",
