--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@ next-env.d.ts
 .vscode
 # Sentry Auth Token
 .sentryclirc
+
+
+#pwa
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
