--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lowlight": "2.4",
     "lucide-react": "^0.259.0",
     "next": "^13.2.4",
+    "next-pwa": "^5.6.0",
     "openai-edge": "^1.2.2",
     "postcss": "8.4.24",
     "react": "^18.2.0",
