--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tiptap/extension-task-list": "^2.0.3",
     "@tiptap/extension-text-style": "^2.0.3",
     "@tiptap/extension-underline": "^2.0.3",
+    "@tiptap/html": "^2.1.13",
     "@tiptap/pm": "^2.0.3",
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
