--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "embla-carousel-react": "^8.0.0-rc14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "gsap": "^3.12.4",
     "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
     "lowlight": "2.4",
